--- a/angular/projeto-angular/src/app/app.component.html
+++ b/angular/projeto-angular/src/app/app.component.html
@@ -1,5 +1,10 @@
-<h1>
-  Olá Mundo
-</h1>
+<button type="button" class="btn btn-primary">Primary</button>
+<button type="button" class="btn btn-secondary">Secondary</button>
+<button type="button" class="btn btn-success">Success</button>
+<button type="button" class="btn btn-danger">Danger</button>
+<button type="button" class="btn btn-warning">Warning</button>
+<button type="button" class="btn btn-info">Info</button>
+<button type="button" class="btn btn-light">Light</button>
+<button type="button" class="btn btn-dark">Dark</button>
 
-<p>Projeto Angular</p>
+<button type="button" class="btn btn-link">Link</button>
